--- a/static/default.css
+++ b/static/default.css
@@ -44,3 +44,14 @@ nav a:hover{
   text-decoration: none;
   color: inherit;
 }
+a{
+  padding: 5px 5px 5px 5px;
+  border: 2px solid black;
+  margin: 5px;
+  color: black;
+  text-decoration: none;
+}
+a:hover{
+  color: white;
+  background-color: black;
+}
